# cpp-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: 01-introduction.md  02-getting-started.md  02-sorting.md
include/algorithms/: sorting.hpp
src/sorting/: bubble_sort.cpp  insertion_sort.cpp  merge_sort.cpp
tests/: test_sorting.cpp
